--- a/mcs/tests/Makefile
+++ b/mcs/tests/Makefile
@@ -56,7 +56,6 @@ endif
 LOCAL_RUNTIME_FLAGS = --verify-all
 COMPILER = $(topdir)/class/lib/$(PROFILE)/mcs.exe
 TESTER = MONO_RUNTIME='$(RUNTIME)' $(TEST_RUNTIME) $(TEST_RUNTIME_FLAGS) $(LOCAL_RUNTIME_FLAGS) $(topdir)/class/lib/$(PROFILE)/compiler-tester.exe
-TESTER_INTERP = MONO_RUNTIME='$(RUNTIME)' $(TEST_RUNTIME) $(TEST_RUNTIME_FLAGS) --interpreter $(LOCAL_RUNTIME_FLAGS) $(topdir)/class/lib/$(PROFILE)/compiler-tester.exe
 
 TEST_ILS := $(wildcard *-lib.il)
 
@@ -65,17 +64,20 @@ build-compiler-lib:
 
 qcheck: build-compiler-lib qcheck2
 
+ifdef TEST_WITH_INTERPRETER
+KNOWN_ISSUES = known-issues-interp-$(PROFILE)
+else
+KNOWN_ISSUES = known-issues-$(PROFILE)
+endif
+
 qcheck2:
-	$(TESTER) -mode:pos -files:$(TEST_PATTERN) -compiler:$(COMPILER) -issues:known-issues-$(PROFILE) -log:$(PROFILE).log -il:ver-il-$(PROFILE).xml $(DEFINES) $(TOPTIONS)
+	$(TESTER) -mode:pos -files:$(TEST_PATTERN) -compiler:$(COMPILER) -issues:$(KNOWN_ISSUES) -log:$(PROFILE).log -il:ver-il-$(PROFILE).xml $(DEFINES) $(TOPTIONS)
 
 gen-mt-tests:
 	$(TESTER) -mode:nunit -files:'v2' -compiler:$(COMPILER) -issues:known-issues-mt -compiler-options:"-lib:$(topdir)/class/lib/monotouch projects/MonoTouch/ivt.cs"
 
 
 TESTERVERBOSE=$(if $(V),-verbose,)
-
-check-interp: compile-all setup build-compiler-lib
-	$(TESTER_INTERP) -mode:pos -files:$(TEST_PATTERN) -compiler:$(COMPILER) -issues:known-issues-interp-$(PROFILE) -log:$(PROFILE).log -il:ver-il-$(PROFILE).xml $(DEFINES) $(TOPTIONS) $(TESTERVERBOSE)
 
 test-local:
 	@:
