[wasm] Update the wasm m2n tramps.
They are not generated by a ruby script.
The commit includes the generated file and the generation script for now to ease development.
We can later discuss generating it at build time.

--- a/mono/mini/Makefile.am.in
+++ b/mono/mini/Makefile.am.in
@@ -464,6 +464,7 @@ common_sources = \
 	aot-compiler.c		\
 	aot-runtime.c		\
 	aot-runtime-wasm.c	\
+	wasm_m2n_invoke.g.h	\
 	graph.c			\
 	mini-codegen.c		\
 	mini-exceptions.c	\
