[sdks] Match xamarin-android targets flags and parameters

--- a/sdks/builds/.gitignore
+++ b/sdks/builds/.gitignore
@@ -2,8 +2,9 @@
 .stamp-*
 *.mk.generated
 *.config.cache
-android-arm/
-android-arm64/
+android-armeabi/
+android-armeabi-v7a/
+android-arm64-v8a/
 android-x86/
 android-x86_64/
 ios-target32/
