--- a/sdks/android/Makefile
+++ b/sdks/android/Makefile
@@ -113,16 +113,19 @@ MONO_LIBS= \
 	libmonosgen-2.0.so \
 	libMonoPosixHelper.so
 
-$(patsubst %,$(APK_DIR)/jni/armeabi-v7a/%,$(MONO_LIBS)): $(APK_DIR)/jni/armeabi-v7a/%: $(TOP)/sdks/out/android-arm/lib/% | $(APK_DIR)/jni/armeabi-v7a
+$(patsubst %,$(APK_DIR)/jni/armeabi/%,$(MONO_LIBS)): $(APK_DIR)/jni/armeabi/%: $(TOP)/sdks/out/android-targetarmv5/lib/% | $(APK_DIR)/jni/armeabi
 	cp $< $@
 
-$(patsubst %,$(APK_DIR)/jni/arm64-v8a/%,$(MONO_LIBS)): $(APK_DIR)/jni/arm64-v8a/%: $(TOP)/sdks/out/android-arm64/lib/% | $(APK_DIR)/jni/arm64-v8a
+$(patsubst %,$(APK_DIR)/jni/armeabi-v7a/%,$(MONO_LIBS)): $(APK_DIR)/jni/armeabi-v7a/%: $(TOP)/sdks/out/android-targetarmv7/lib/% | $(APK_DIR)/jni/armeabi-v7a
 	cp $< $@
 
-$(patsubst %,$(APK_DIR)/jni/x86/%,$(MONO_LIBS)): $(APK_DIR)/jni/x86/%: $(TOP)/sdks/out/android-x86/lib/% | $(APK_DIR)/jni/x86
+$(patsubst %,$(APK_DIR)/jni/arm64-v8a/%,$(MONO_LIBS)): $(APK_DIR)/jni/arm64-v8a/%: $(TOP)/sdks/out/android-targetarm64/lib/% | $(APK_DIR)/jni/arm64-v8a
 	cp $< $@
 
-$(patsubst %,$(APK_DIR)/jni/x86_64/%,$(MONO_LIBS)): $(APK_DIR)/jni/x86_64/%: $(TOP)/sdks/out/android-x86_64/lib/% | $(APK_DIR)/jni/x86_64
+$(patsubst %,$(APK_DIR)/jni/x86/%,$(MONO_LIBS)): $(APK_DIR)/jni/x86/%: $(TOP)/sdks/out/android-targetx86/lib/% | $(APK_DIR)/jni/x86
+	cp $< $@
+
+$(patsubst %,$(APK_DIR)/jni/x86_64/%,$(MONO_LIBS)): $(APK_DIR)/jni/x86_64/%: $(TOP)/sdks/out/android-targetx86_64/lib/% | $(APK_DIR)/jni/x86_64
 	cp $< $@
 
 $(APK_DIR)/assets/mconfig: machine.config | $(APK_DIR)/assets
@@ -147,6 +150,7 @@ package: $(APK_DIR)/src/
 package: $(APK_DIR)/jni/Android.mk
 package: $(APK_DIR)/jni/Application.mk
 package: $(APK_DIR)/jni/runtime-bootstrap.c
+package: $(patsubst %,$(APK_DIR)/jni/armeabi/%,$(MONO_LIBS))
 package: $(patsubst %,$(APK_DIR)/jni/armeabi-v7a/%,$(MONO_LIBS))
 package: $(patsubst %,$(APK_DIR)/jni/arm64-v8a/%,$(MONO_LIBS))
 package: $(patsubst %,$(APK_DIR)/jni/x86/%,$(MONO_LIBS))
