[wasm] Pass the name of the test suite to the test driver. Disable running tests that fail under the interpreter.

--- a/sdks/wasm/Makefile
+++ b/sdks/wasm/Makefile
@@ -78,15 +78,21 @@ managed/nunitlite.dll: $(TOP)/mcs/class/lib/wasm/nunitlite.dll | managed/
 managed/main.exe: $(TEST_DEPS) $(APP_SOURCES) | managed/
 	mcs /nostdlib /unsafe -out:$@ $(TEST_MCS_DEPS) $(APP_SOURCES)
 
+$(TOP)/mcs/class/lib/wasm/tests/wasm_corlib_test.dll:
+	cd $(TOP)/mcs/class/corlib && make test-local PROFILE=wasm
+
+managed/wasm_corlib_test.dll: $(TOP)/mcs/class/lib/wasm/tests/wasm_corlib_test.dll
+	cp $< $@
+
 managed/mini_tests.dll: $(TEST_DEPS) $(MINI_TEST_SOURCES) mini-test-runner.cs | managed/
 	mcs /nostdlib /unsafe -target:library -out:$@ -define:__MOBILE__,ARCH_32 $(TEST_MCS_DEPS) $(MINI_TEST_SOURCES) mini-test-runner.cs 
 
-build-managed: managed/nunitlite.dll managed/mini_tests.dll managed/main.exe
+build-managed: managed/nunitlite.dll managed/mini_tests.dll managed/wasm_corlib_test.dll managed/main.exe
 
 build: build-native build-managed
 
-run: toolchain build
-	$(D8) --expose_wasm test.js
+run-%: toolchain build
+	$(D8) --expose_wasm test.js -- $*
 
 clean:
 	
