[corlib] Move System.Runtime.InteropServices.RuntimeInformation to corlib to match .net 4.7.1 api

--- a/mcs/class/corlib/Makefile
+++ b/mcs/class/corlib/Makefile
@@ -27,7 +27,8 @@ endif
 RESX_RESOURCE_STRING = \
 	../../../external/corert/src/System.Private.CoreLib/src/Resources/Strings.resx \
 	../../../external/corefx/src/System.Collections.Concurrent/src/Resources/Strings.resx \
-	../../../external/corefx/src/System.Memory/src/Resources/Strings.resx
+	../../../external/corefx/src/System.Memory/src/Resources/Strings.resx \
+	../../../external/corefx/src/System.Runtime.InteropServices.RuntimeInformation/src/Resources/Strings.resx \
 
 LIBRARY_COMPILE = $(BOOT_COMPILE)
 LIBRARY_INSTALL_DIR = $(mono_libdir)/mono/$(FRAMEWORK_VERSION)
