--- a/sdks/builds/.gitignore
+++ b/sdks/builds/.gitignore
@@ -2,10 +2,11 @@
 .stamp-*
 *.mk.generated
 *.config.cache
-android-arm/
-android-arm64/
-android-x86/
-android-x86_64/
+android-armeabi-*/
+android-armeabi-v7a-*/
+android-arm64-v8a-*/
+android-x86-*/
+android-x86_64-*/
 ios-target32/
 ios-target64/
 ios-cross32/
