[man] Rewrite the profiler-related man pages.
* Separate profiler module documentation into a new mono-profilers(1) page.
* Add documentation for the aot and coverage profilers.
* Rewrite the mprof-report(1) page to only talk about mprof-report itself.
* Rewrite and update the profiler-related sections of mono(1).
* Conform to man page formatting conventions.

--- a/man/Makefile.am
+++ b/man/Makefile.am
@@ -58,6 +58,7 @@ man_MANS = \
 	mono-configuration-crypto.1 \
 	ccrewrite.1			\
 	cccheck.1			\
-	mono-symbolicate.1
+	mono-symbolicate.1			\
+	mono-profilers.1
 
 EXTRA_DIST = $(man_MANS)
