Add target and bin_SCRIPTS entry

--- a/scripts/Makefile.am
+++ b/scripts/Makefile.am
@@ -36,7 +36,8 @@ bin_SCRIPTS = \
 	mono-test-install	\
 	peverify		\
 	mcs			\
-	csc					\
+	csc			\
+	vbc			\
 	csi			\
 	mono-package-runtime	\
 	mono-heapviz		\
@@ -207,6 +208,10 @@ mcs: mcs.in Makefile
 
 csc: csc.in Makefile
 	$(REWRITE_COMMON) $(srcdir)/csc.in > $@.tmp
+	mv -f $@.tmp $@
+
+vbc: vbc.in Makefile
+	$(REWRITE_COMMON) $(srcdir)/vbc.in > $@.tmp
 	mv -f $@.tmp $@
 
 dmcs: dmcs.in Makefile
