XMLDSIG from .NET Core.

--- a/mcs/class/System.Security/Makefile
+++ b/mcs/class/System.Security/Makefile
@@ -8,6 +8,7 @@ MONO_SECURITY=Mono.Security
 endif
 
 LIBRARY = System.Security.dll
+API_BIN_REFS := System.Numerics
 LIB_REFS = secxml/System bare/System.Xml $(MONO_SECURITY)
 KEYFILE = ../msfinal.pub
 LIB_MCS_FLAGS = \
