[tests] Disable weak-fields.exe on ARM
It was introduced by https://github.com/mono/mono/pull/5972

Filed bug: https://bugzilla.xamarin.com/show_bug.cgi?id=60973

Reviewed manually by @lewurm.

--- a/mono/tests/Makefile.am
+++ b/mono/tests/Makefile.am
@@ -701,12 +701,13 @@ PLATFORM_DISABLED_TESTS += monitor.exe threadpool-exceptions5.exe appdomain-thre
 endif
 
 if ARM
-PLATFORM_DISABLED_TESTS += filter-stack.exe
+PLATFORM_DISABLED_TESTS += filter-stack.exe weak-fields.exe
 INTERP_DISABLED_TESTS_PLATFORM=finalizer-exception.exe main-returns-abort-resetabort.exe block_guard_restore_aligment_on_exit.exe \
 	delegate-exit.exe delegate-exit.exe delegate-delegate-exit.exe delegate-async-exit.exe delegate3.exe delegate1.exe
 endif
 
 if ARM64
+PLATFORM_DISABLED_TESTS += weak-fields.exe
 INTERP_DISABLED_TESTS_PLATFORM=finalizer-exception.exe main-returns-abort-resetabort.exe block_guard_restore_aligment_on_exit.exe
 endif
 
